# mentoriabot

./: .gitignore  .nixd.json  Cargo.toml  README.md  config.example.json  default.nix  diesel.toml  flake.nix  rustfmt.toml
crates/bot/: Cargo.toml
crates/bot/src/: authenticate.rs  commands.rs  common.rs  config.rs  events.rs  main.rs
crates/bot/src/commands/: autocomplete.rs  embeds.rs  forms.rs  loadmentors.rs  modal.rs  modals.rs  ping.rs  register.rs  restart.rs  schedule.rs  sessionman.rs  sessions.rs  teacherman.rs  testform.rs  unschedule.rs  userman.rs  userup.rs
crates/bot/src/commands/forms/: paginate.rs  schedule.rs
crates/bot/src/commands/modals/: modal.rs  register.rs  sessions.rs  teacher.rs
crates/forms/: Cargo.toml
crates/forms/src/: interaction.rs  lib.rs  state.rs  util.rs
crates/forms/src/component/: buildable.rs  generatereply.rs  modal.rs
crates/forms/src/component/subcomponent/: reply.rs  selectmenu.rs
crates/forms/src/interaction/: custom_id.rs
crates/lib/: Cargo.toml
crates/lib/src/: error.rs  lib.rs  model.rs  util.rs
crates/lib/src/db/: connection.rs  repository.rs  schema.rs
crates/lib/src/db/repository/: macros.rs  session.rs  teacher.rs  user.rs
crates/lib/src/model/: availability.rs  discordid.rs  session.rs  teacher.rs  user.rs  weekday.rs
crates/lib/src/notification/: calendar.rs  email.rs  google.rs
crates/lib/src/util/: forms.rs  iter.rs  locale.rs  macros.rs  string.rs  time.rs  validation.rs
crates/lib/src/util/time/: parse.rs
crates/loadmentors/: Cargo.toml
crates/loadmentors/src/: lib.rs  reader.rs
crates/loadmentors/src/reader/: row.rs
crates/macros/: Cargo.toml
crates/macros/src/: button.rs  common.rs  component.rs  form.rs  lib.rs  model.rs  reply.rs  select.rs  select_option.rs  util.rs
crates/macros/src/model/: button.rs  reply.rs  select.rs  select_option.rs
crates/macros/src/util/: darling_types.rs
forms/: Cargo.toml
forms/src/: component.rs  error.rs  form.rs  interaction.rs  lib.rs  state.rs  tests.rs  util.rs
forms/src/component/: buildable.rs  generatereply.rs  message.rs  modal.rs  subcomponent.rs
forms/src/component/subcomponent/: button.rs  reply.rs  selectmenu.rs
forms/src/interaction/: custom_id.rs  selectvalue.rs
lib/: Cargo.toml
lib/src/: db.rs  error.rs  lib.rs  notification.rs  util.rs
lib/src/db/: connection.rs  repository.rs
lib/src/db/repository/: availability.rs  macros.rs  teacher.rs  user.rs
lib/src/model/: availability.rs  discordid.rs  session.rs  teacher.rs  user.rs  weekday.rs
lib/src/notification/: calendar.rs  email.rs  google.rs
lib/src/repository/: availability.rs  session.rs
lib/src/util/: bases.rs  locale.rs  macros.rs  time.rs
lib/src/util/time/: parse.rs
locales/: en.yml  pt-BR.yml
macros/: Cargo.toml
macros/src/: button.rs  common.rs  component.rs  form.rs  lib.rs  modal_component.rs  model.rs  reply.rs  select.rs  select_option.rs  util.rs
macros/src/model/: button.rs  macros.rs  reply.rs  select.rs
macros/src/util/: darling_types.rs
migrations/2023-03-14-012142_create-users/: up.sql
migrations/2023-03-18-012622_create-lecture/: down.sql  up.sql
migrations/2023-03-18-014551_create-lecture-student/: down.sql  up.sql
migrations/2023-03-29-052512_create-teacher-and-availability/: down.sql  up.sql
migrations/2023-04-03-045742_create-session/: up.sql
migrations/2023-04-03-050105_create-session-student/: down.sql  up.sql
nix/: module.nix
src/: authenticate.rs  commands.rs  common.rs  config.rs  connection.rs  error.rs  events.rs  form.rs  interaction.rs  main.rs  minirustbot.rs  model.rs  repository.rs  schema.rs  util.rs
src/commands/: lectures.rs  modal.rs  modals.rs  ping.rs  schedule.rs  sessions.rs  testform.rs  userman.rs  userup.rs
src/commands/forms/: schedule.rs
src/commands/modals/: lectures.rs  sessions.rs
src/error/: form.rs
src/form/: component.rs  testform.rs
src/form/component/: generatereply.rs  message.rs  modal.rs  subcomponent.rs
src/form/component/subcomponent/: button.rs  selectmenu.rs
src/interaction/: custom_id.rs  form.rs  selectvalue.rs
src/interaction/form/: testform.rs
src/interaction/form/component/: message.rs  modal.rs
src/minirustbot/: commands.rs  common.rs  events.rs  interaction.rs
src/minirustbot/commands/: modal.rs  ping.rs  testform.rs  userup.rs
src/minirustbot/interaction/: form.rs  handler.rs
src/minirustbot/interaction/form/: testform.rs
src/model/: availability.rs  discordid.rs  lecture.rs  lecture_student.rs  session.rs  session_student.rs  teacher.rs  user.rs  weekday.rs
src/notification/: calendar.rs
src/repository/: availability.rs  lecture.rs  lecture_student.rs  macros.rs  session.rs  session_student.rs  teacher.rs  user.rs
src/util/: iter.rs  macros.rs  time.rs
src/util/time/: parse.rs
