[package]
name = "minirustbot"
version = "0.1.0"
authors = ["PgBiel"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.2"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
retainer = "0.3.0"
async-trait = "0.1.64"
strum = "0.24.1"
strum_macros = "0.24.3"
diesel = { version = "2.0.0", features = ["chrono"] }
diesel-async = { version = "0.2.1", features = ["postgres", "deadpool"] }
chrono = "0.4.24"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
minirustbot_macros = { path = "macros" }
minirustbot_forms = { path = "forms" }
