[workspace]
members = ["crates/*"]
default-members = ["crates/bot"]

[workspace.package]
version = "0.1.0"
authors = ["PgBiel"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
# disable 'handle_panics' feature
poise = { version = "0.5.5", default-features = false, features = ["cache", "chrono"] }

[workspace.dependencies.serenity]
version = "0.11.5"
features = ["builder", "client", "gateway", "model", "utils", "collector", "rustls_backend"]
default-features = false
