[package]
name = "minirustbot_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
async-trait = "0.1.64"
strum = "0.24.1"
strum_macros = "0.24.3"
diesel = { version = "2.0.4", features = ["chrono"] }
diesel-async = { version = "0.2.2", features = ["postgres", "deadpool"] }
chrono = "0.4.24"
google-calendar3 = "5"
once_cell = "1.17.1"
rust-i18n = "1.1.4"
minirustbot_forms = { path = "../forms" }

# For translations with 'cargo i18n'
[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "pt-BR"]

# The default locale, default: "en".
default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path is same as the path you pass to `rust_i18n::i18n!` method.
load-path = "locales"
