[package]
name = "minirustbot_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
async-trait = "0.1.64"
strum = "0.24.1"
strum_macros = "0.24.3"
diesel = { version = "2.0.4", features = ["chrono"] }
diesel-async = { version = "0.2.2", features = ["postgres", "deadpool"] }
chrono = "0.4.24"
google-calendar3 = "5"
once_cell = "1.17.1"
minirustbot_forms = { path = "../forms" }
