[package]
name = "minirustbot_macros"
version = "0.1.0"
authors = ["PgBiel"]
edition = "2021"
description = "Macro implementation crate for Mini Rust Bot"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "fold"] }
quote = "1.0.26"
proc-macro2 = "1.0.51"
darling = "0.20.1"
