[package]
name = "mentoriabot"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
poise = "0.5.2"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
chrono = "0.4.24"
async-trait = "0.1.64"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
once_cell = "1.17.1"
lazy_static = "1.4.0"
rust-i18n = { version = "1.2.2", default-features = false, features = ["quote"] }
google-apis-common = "5"
validator = { version = "0.16.1", features = ["derive"] }
regex = "1"
mentoriabot_lib = { path = "../lib" }
mentoriabot_macros = { path = "../macros" }
mentoriabot_forms = { path = "../forms" }

# For translations with 'cargo i18n'
[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "pt-BR"]

# The default locale, default: "en".
default-locale = "en"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path is same as the path you pass to `rust_i18n::i18n!` method.
load-path = "locales"
