[package]
name = "mentoriabot_lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { workspace = true }
serenity = { workspace = true }
base64 = "0.21.0"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
async-trait = "0.1.64"
strum = "0.24.1"
strum_macros = "0.24.3"
diesel = { version = "2.0.4", features = ["chrono"] }
diesel-async = { version = "0.2.2", features = ["postgres", "deadpool"] }
chrono = "0.4.24"
google-apis-common = "5"
google-gmail1 = "5"
google-calendar3 = "5"
once_cell = "1.17.1"
tempfile = "3.5"
validator = "0.16.1"
lettre = { version = "*", features = ["builder"] }
csv = "1.2.2"
regex = "1"
mentoriabot_forms = { path = "../forms" }

[dev-dependencies]
dotenvy = "0.15.6"
diesel = { version = "2.0.4", features = ["chrono", "postgres"] }
diesel_migrations = "2.0.0"
