[package]
name = "mentoriabot_loadmentors"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
csv = "1.2.2"
lazy_static = "1.4.0"
validator = { version = "0.16.1", features = ["derive"] }
regex = "1"
chrono = "0.4.24"
mentoriabot_lib = { path = "../lib" }
