[package]
name = "minirustbot_macros"
description = "Macro implementation crate for Mini Rust Bot"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "fold"] }
quote = "1.0.26"
proc-macro2 = "1.0.51"
darling = "0.20.1"
